switched from java 11 to java 8 to make API's work on droplet and refactored java 11 methods to java 8 methods